Can display saved animals for user

--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -42,6 +42,8 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw"></i>Your Pets</a>
       <div class="dropdown-divider"></div>
+      <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-paw"></i>Saved Pets</a>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
     </div>
   </div>
