--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -1,10 +1,7 @@
 
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <div>
       <img class="card-img-top" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
-      <i class="fa fa-hourglass" id="timeLeft"> {{timeLeft}} days</i>
-    </div>
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
         [routerLink]="['/animals/', animal.id]"><i class="fa fa-paw"></i></button></li>
@@ -13,10 +10,15 @@
     </ul>
   </div>
   <div class="card-body p-1">
-    <h6 class="card-title text-center mb-1">
+    <h5 class="card-title text-center mb-1">
       {{animal.name}}
-    </h6>
+    </h5>
+    <h6>{{animal.gender | titlecase}} / {{animal.age}} years</h6>
+    <div class="progress" style="height: 10px">
+      <div class="progress-bar bg-warning" role="progressbar" [style.width]="(timeLeft / 90 * 100)+'%'" aria-valuenow="75" aria-valuemin="0" aria-valuemax="90"></div>
+    </div>
     <div id="viewBar">
+      <i class="fa fa-hourglass" id="timeLeft"> {{timeLeft}} days</i>
       <i class="fa fa-eye mr-3"> {{animal.views}}</i><i class="fa fa-heart mr-3"> {{animal.saves}}</i> <i class="fa fa-comment-o"> {{animal.inquiries}}</i>
     </div>
   </div>
