--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -1,19 +1,13 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']">Find A Pet</a>
+    <a class="navbar-brand" [routerLink]="['/home']">(Website Name Goes Here)</a>
 
   <ul class="navbar-nav mr-auto">
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['/animals']">Browse Pets</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/messages']">Guardians</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/messages']">About</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/messages']">Messages</a>
+      <a class="nav-link">About</a>
     </li>
   </ul>
 
@@ -43,6 +37,8 @@
       <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw"></i>Your Pets</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-paw"></i>Saved Pets</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-paw"></i>Messages</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
     </div>
