--- a/AnimalShelter-SPA/src/app/messages/messages.component.html
+++ b/AnimalShelter-SPA/src/app/messages/messages.component.html
@@ -25,7 +25,8 @@
         <th style="width: 20%">Sent / Received</th>
         <th style="width: 20%"></th>
       </tr>
-      <tr *ngFor="let message of messages" [routerLink]="['/members', 
+      <tr *ngFor="let message of messages" [routerLink]= "['/message-thread/', 
+        messageContainer == 'Outbox' ? message.senderId : message.recipientId, 
         messageContainer == 'Outbox' ? message.recipientId : message.senderId]">
         <td>{{message.content}}</td>
         <td>
