--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
@@ -45,6 +45,7 @@
 #innerCard {
     height: 70px;
     border: none;
+    position: absolute;
 }
 
 .card-footer {
@@ -87,4 +88,8 @@ img {
 
 div {
     min-height: 40px;
+}
+
+.badge-pill {
+    position: absolute;
 }
