--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -13,10 +13,10 @@
           <hr>
           <div id="innerCard" class="card mb-3" style="max-width: 540px;">
             <div class="row no-gutters">
-              <div class="col-md-4">
+              <div class="col-md-4-sm-2">
                   <img src="{{animal.userPhotoUrl}}" alt="Owner Picture">
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8-sm-3">
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title">{{animal.userKnownAs}}</h5>
