Fixed message send issue and added timeago

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -46,6 +46,7 @@
                     <h3 class="card-title">About {{animal.name}}</h3>
                   </div>
                   <div class="col" id="timeLeft">
+                    <p>Posted {{animal.posted | timeago}}</p>
                     <i class="fa fa-hourglass"> {{timeLeft}} Days</i> 
                   </div>
                 </div>
