--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
@@ -15,9 +15,9 @@
             <div class="header">
               <strong class="primary-font float-right">{{message.senderKnownAs}}</strong>
               <small class="text-muted float-left">
-                <span class="fa fa-clock-o">{{message.messageSent}}</span>
+                <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
                 <span *ngIf="!message.isRead" class="text-danger">(unread)</span>
-                <span *ngIf="message.isRead" class="text-success">(read {{message.dateRead}})</span>
+                <span *ngIf="message.isRead" class="text-success">(read {{message.dateRead | timeago}})</span>
               </small>
             </div>
             <p>{{message.content}}</p>
@@ -32,7 +32,7 @@
           <div class="chat-body">
             <div class="header">
               <small class="text-muted float-right">
-                <span class="fa fa-clock-o">{{message.messageSent}}</span>
+                <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
               </small>
               <strong class="primary-font">{{message.senderKnownAs}}</strong>
             </div>
