Fixed login refresh. Changed object to stringify.

--- a/AnimalShelter-SPA/src/app/messages/messages.component.html
+++ b/AnimalShelter-SPA/src/app/messages/messages.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="row" *ngIf="messages.length == 0">
-    <h3>No messages</h3>
+    <h3>No new messages</h3>
   </div>
 
   <div class="row" *ngIf="messages.length > 0">
