--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -18,78 +18,68 @@
         <hr>
       
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Gender: </label>
-          <label class="radio-inline">
-            <input class="mr-3" type="radio" value="male" formControlName="gender">Male
-          </label>
-          <label class="radio-inline ml-3">
-            <input class="mr-3" type="radio" value="female" formControlName="gender">Female
-          </label>
-        </div>
-    
-      
-        <div class="form-group">
+          <label class="control-label" style="margin-right:10px">Your pet's name: </label>
           <input class="form-control" type="text" placeholder="Name" formControlName="name">
         </div>
         <div class="form-group">
+          <label class="control-label" style="margin-right:10px">Pet gender: </label>
           <label class="radio-inline">
-            <input class="mr-3" type="radio" value="dog" formControlName="species">Dog
+            <input class="mr-1 ml-3" type="radio" value="male" formControlName="gender">Male
           </label>
           <label class="radio-inline ml-3">
-            <input class="mr-3" type="radio" value="cat" formControlName="species">Cat
+            <input class="mr-1" type="radio" value="female" formControlName="gender">Female
           </label>
         </div>
+    
         <div class="form-group">
+          <!-- <select class="custom-select">
+            <option value="" disabled>Pet Type:</option>
+            <option><input value="dog" formControlName="species"> Dog</option>
+            <option><input value="dog" formControlName="species">Cat</option>
+         </select> -->
+         <label class="control-label" style="margin-right:10px">Pet Type: </label>
+          <label class="radio-inline">
+            <input class="mr-1 ml-3" type="radio" value="dog" formControlName="species">Dog
+          </label>
+          <label class="radio-inline ml-3">
+            <input class="mr-1" type="radio" value="cat" formControlName="species">Cat
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="control-label" style="margin-right:10px">Breed: </label>
           <input class="form-control" type="text" placeholder="Breed" formControlName="breed">
         </div>
       
         <div class="form-group">
-          <input class="form-control" placeholder="Age" formControlName="age">
+          <label class="control-label" style="margin-right:10px">Age: </label>
+          <input class="form-control" type="text" placeholder="Age" formControlName="age">
         </div>
         <div class="form-group">
-          <input class="form-control" placeholder="Adoption Fee" formControlName="adoptionFee">
+          <label class="control-label" style="margin-right:10px">Adoption Fee: </label>
+          <input class="form-control" type="text" placeholder="Adoption Fee" formControlName="adoptionFee">
         </div>
         <div class="form-group">
+          <label class="control-label" style="margin-right:10px">Adopt By: </label>
           <input class="form-control" type="date" placeholder="Adopt By" formControlName="adoptBy">
         </div>
 
         <div class="form-group text-center">
-          <button class="btn btn-success" type="submit">Register</button>
-          <button class="btn btn-default" type="button">Cancel</button>
+          <button class="btn btn-success mt-3" type="submit">Register</button>
+          <button class="btn btn-default mt-3" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label class="checkbox-inline">
               <input type="checkbox" name="likes" (click)="addOrRemove('walks','like')"> Walks
           </label>
           <label class="checkbox-inline">
             <input type="checkbox" name="likes" (click)="addOrRemove('cuddles','like')"> Cuddles
         </label>
-        </div>
+        </div> -->
     
         
       </form>
-
-  
-
-        <!-- <label>Likes</label>
-        
-
-        <label>Qualities</label>
-        <div class="form-group">
-            <label class="checkbox-inline">
-                <input type="checkbox" name="Qualities" (click)="addOrRemove('friendly','quality')"> Friendly
-            </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" name="Qualities" (click)="addOrRemove('energetic','quality')"> Energetic
-            </label>
-        </div> -->
-
-        <!-- <div class="form-group text-center">
-          <button class="btn btn-success" type="submit" (click)="registerAnimal(animal)">Register</button>
-          <button class="btn btn-default" type="button">Cancel</button>
-        </div>
-      </form> -->
     </div>
   </div>
 </div>
