--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
@@ -31,5 +31,27 @@
 }
 
 img {
-    height: 60px;
+    height: 40px;
+    width: 40px;
+    margin: 10px;
+
+}
+
+.speech-bubble {
+    background-color: #ececec;
+    border: 1px solid #c8c8c8;
+    border-radius: 5px;
+    width: 110px;
+    text-align: center;
+    justify-content: right;
+}
+
+.speech-bubble .arrow {
+    border-style: solid;
+}
+ 
+.bottom {
+    border-color: #c8c8c8 transparent transparent transparent;
+    border-width: 8px 8px 0px 8px;
+    bottom: -8px;
 }
