Changed age to years and months

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -91,7 +91,7 @@
         <li class="list-group-item mt-5">{{animal.species | titlecase}}</li>
         <li class="list-group-item">{{animal.breed | titlecase}}</li>
         <li class="list-group-item">{{animal.gender | titlecase}}</li>
-        <li class="list-group-item">{{animal.age}} yrs</li>
+        <li class="list-group-item">{{animal.ageYears}} yrs {{animal.ageMonths}} mo </li>
       </ul>
     </div>
   </div>
