--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -57,7 +57,10 @@
                       <option>Male</option>
                     </select>
                   <h6 class="mt-2">Age</h6>
-                    <textarea name="age" rows="1" class="form-control" [(ngModel)]="animal.age"></textarea>
+                    <p>Years:</p>
+                    <textarea name="ageYears" rows="1" class="form-control" [(ngModel)]="animal.ageYears"></textarea>
+                    <p>Months:</p>
+                    <textarea name="ageMonths" rows="1" class="form-control" [(ngModel)]="animal.ageMonths"></textarea>
                   <h6 class="mt-2">Adoption Fee</h6>
                     <textarea name="adoptionFee" rows="1" class="form-control" [(ngModel)]="animal.adoptionFee"></textarea>
                   <h6 class="mt-2">Adopt By</h6>
