--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -50,10 +50,14 @@
           <label class="control-label" style="margin-right:10px">Breed: </label>
           <input class="form-control" type="text" placeholder="Breed" formControlName="breed">
         </div>
-      
+        <label class="control-label" style="margin-right:10px">Age: </label>
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Age: </label>
-          <input class="form-control" type="text" placeholder="Age" formControlName="age">
+          <label class="control-label" style="margin-right:10px">Years: </label>
+          <input class="form-control" type="text" placeholder="years" formControlName="ageYears">
+        </div>
+        <div class="form-group">
+          <label class="control-label" style="margin-right:10px">Months: </label>
+          <input class="form-control" type="text" placeholder="months" formControlName="ageMonths">
         </div>
         <div class="form-group">
           <label class="control-label" style="margin-right:10px">Adoption Fee: </label>
