--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -13,7 +13,7 @@
     <h5 class="card-title text-center mb-1">
       {{animal.name}}
     </h5>
-    <h6>{{animal.gender | titlecase}} / {{animal.age}} years</h6>
+    <h6>{{animal.gender | titlecase}} / {{animal.ageYears}} yrs {{animal.ageMonths}} mo </h6>
     <div class="progress" style="height: 10px">
       <div class="progress-bar bg-warning" role="progressbar" [style.width]="(timeLeft / 90 * 100)+'%'" aria-valuenow="75" aria-valuemin="0" aria-valuemax="90"></div>
     </div>
