--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <form *ngIf="loginMode" #loginForm ="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)= "login()">
-    <button class="mr-2" (click)="loginToggle()"><i class="fa fa-arrow-left"> Back</i></button>
+    <button type="button" class="mr-2" (click)="loginToggle()"><i class="fa fa-arrow-left"> Back</i></button>
     <input class="form-control mr-sm-2" type="text" name="username" 
       placeholder="Username" required [(ngModel)]= "model.username">
     <input class="form-control mr-sm-2" type="password" name="password" 
