Show all your-animals, update species,update photo

--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -35,7 +35,7 @@
                   <div class="row">
                     <div class="col">
                       <h6 class="mt-2">Pet Type</h6>
-                      <select class="form-control" id="petType" name="petType" rows="1" [(ngModel)]="animal.species">
+                      <select class="form-control" id="petType" name="species" rows="1" [(ngModel)]="animal.species">
                         <option>Dog</option>
                         <option>Cat</option>
                         <option>Fish</option>
