--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div *ngFor="let animal of animals" class="col-lg-6">
-          <div class="card">
+          <div class="card mb-5">
             <div class="card-body">
               <div>
                 <strong>{{animal.name}}</strong>
