Can mark animal as adopted

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -14,7 +14,7 @@
           <div id="innerCard" class="card mb-3" style="max-width: 540px;">
             <div class="row no-gutters">
               <div class="col-md-4-sm-2">
-                  <img src="{{animal.userPhotoUrl}}" alt="Owner Picture">
+                  <img id="ownerPic" src="{{animal.userPhotoUrl}}" alt="Owner Picture">
               </div>
               <div class="col-md-8-sm-3">
                 <div class="row">
