--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -24,7 +24,7 @@
               <div class="btn-group d-flex">
                 <button class="btn btn-success mr-1" [routerLink]="['/messages']" routerLinkActive="router-link-active" > <i class="fa fa-envelope"> Messages</i> </button>
                 <button class="btn btn-primary mr-1 ml-1" [routerLink]="['/animal/edit',animal.id]" routerLinkActive="router-link-active" ><i class="fa fa-pencil"> Edit Profile</i></button>
-                <button class="btn btn-warning ml-1"><i class="fa fa-check"> Mark As Adopted</i></button>
+                <button class="btn btn-warning ml-1" (click)="markAsAdopted(animal.id)"><i class="fa fa-check"> Mark As Adopted</i></button>
               </div>
             </div>
           </div>
