--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.css
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.css
@@ -75,3 +75,22 @@ div {
 h6 {
     text-align: center;
 }
+
+.adopted {
+    height: 20px;
+    z-index: 100;
+    background-color: #2ECC40;
+    position: absolute;
+    transform: translateY(100px);
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: black;
+
+}
+
+.transparent {
+    opacity: 50%;
+}
