--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -1,12 +1,13 @@
 
 <div class="card mb-4">
-  <div class="card-img-wrapper">
+  <span class="adopted" *ngIf="animal.adopted">ADOPTED</span>
+  <div class="card-img-wrapper" [ngClass]="{'transparent' : animal.adopted}">
       <img class="card-img-top" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
         [routerLink]="['/animals/', animal.id]"><i class="fa fa-paw"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-envelope"></i></button></li>
+      <li class="list-inline-item"><button *ngIf="!animal.adopted" class="btn btn-primary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button></li>
+      <li class="list-inline-item"><button *ngIf="!animal.adopted" class="btn btn-primary"><i class="fa fa-envelope"></i></button></li>
     </ul>
   </div>
   <div class="card-body p-1">
