--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
@@ -99,3 +99,22 @@ div {
     height: 70px;
     margin-right: 10px;
 }
+
+.adopted {
+    height: 20px;
+    z-index: 100;
+    background-color: #2ECC40;
+    position: absolute;
+    transform: translateY(100px);
+    width: 90%;
+    height: 50px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: black;
+
+}
+
+.transparent {
+    opacity: 50%;
+}
