--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -3,8 +3,9 @@
     <div class="col-sm-4">
       <div class="card" id="mainCard">
         <div class="container" id="picContainer">
-          <img class="card-img-top img-thumbnail" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
-          <button class="btn btn-primary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button>
+          <span class="adopted" *ngIf="animal.adopted">ADOPTED</span>
+          <img class="card-img-top img-thumbnail" [ngClass]="{'transparent' : animal.adopted}" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
+          <button class="btn btn-primary" *ngIf="!animal.adopted" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button>
         </div>
         <div id="mainCardBody" class="card-body">
           <div id="viewBar">
@@ -23,7 +24,7 @@
                     <h6>@{{animal.username}}</h6>
                   </div>
                   <div class="col">
-                    <button id="messageButton" class="btn btn-primary" [routerLink]="['/message-thread/', userId, animal.userId ]" routerLinkActive="router-link-active" ><i class="fa fa-envelope"></i></button>
+                    <button *ngIf="!animal.adopted" id="messageButton" class="btn btn-primary" [routerLink]="['/message-thread/', userId, animal.userId ]" routerLinkActive="router-link-active" ><i class="fa fa-envelope"></i></button>
                   </div>
                 </div>
                   
