--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.css
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.css
@@ -19,3 +19,23 @@ strong {
     width: 100%;
 }
 
+.transparent {
+    opacity: 50%;
+}
+
+.adopted {
+    height: 20px;
+    z-index: 100;
+    background-color: #2ECC40;
+    position: absolute;
+    transform: translateY(100px);
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: black;
+
+}
+
+
