Ismain at start of pet image scroll, nav icons

--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -36,12 +36,9 @@
                     <div class="col">
                       <h6 class="mt-2">Pet Type</h6>
                       <select class="form-control" id="petType" name="species" rows="1" [(ngModel)]="animal.species">
-                        <option>Dog</option>
-                        <option>Cat</option>
-                        <option>Fish</option>
-                        <option>Tortoise</option>
-                        <option>Hamster</option>
-                        <option>Other</option>
+                        <option value="dog">Dog</option>
+                        <option value="cat">Cat</option>
+                        <option value="other">Other</option>
                       </select>
                     </div>
                     <div class="col">
