--- a/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
@@ -33,7 +33,7 @@
           [(ngModel)]="animalParams.species" name="species">
         <option>dog</option>
         <option>cat</option>
-        <option>tortoise</option>
+        <option>other</option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
