--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -38,6 +38,9 @@
             <option><input value="dog" formControlName="species">Cat</option>
          </select> -->
          <label class="control-label" style="margin-right:10px">Pet Type: </label>
+         <label class="radio-inline ml-3">
+          <input class="mr-1" type="radio" value="other" formControlName="species">Other
+        </label>
           <label class="radio-inline">
             <input class="mr-1 ml-3" type="radio" value="dog" formControlName="species">Dog
           </label>
