--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -32,15 +32,15 @@
     </a>
   
     <div class="dropdown-menu mt-3" *dropdownMenu>
-      <a class="dropdown-item" [routerLink]="['/user-edit']" routerLinkActive="router-link-active" ><i class="fa fa-user"></i>Edit Profile</a>
+      <a class="dropdown-item" [routerLink]="['/user-edit']" routerLinkActive="router-link-active" ><i class="fa fa-user mr-1"></i>Edit Profile</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw"></i>Your Pets</a>
+      <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw mr-1"></i>Your Pets</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-paw"></i>Saved Pets</a>
+      <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-heart mr-1"></i>Saved Pets</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-paw"></i>Messages</a>
+      <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-envelope mr-1"></i>Messages</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
+      <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-1"></i>Logout</a>
     </div>
   </div>
   
