--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -57,7 +57,7 @@
               </div>
             </div>
           
-            
+<!--             
             <div class="container">
               <h4 class="row">Likes:</h4>
               <div class="row" style="width: 100%">
@@ -71,7 +71,7 @@
               <div class="row">
                 <div *ngFor="let goodWith of animal.goodWith" class="d-flex mr-1 ml-1"><span class="badge badge-info mb-2">{{goodWith}}</span></div>
               </div>
-            </div>
+            </div> -->
             
             
             
